tests/testdata/positive/hello.go
package main
func main() {
  fmt.Println("hello");
  fmt.Println(42);
}
