tests/testdata/negative/div_by_zero.go
package main
func main() {
  fmt.Println(10 / 0);
}
